IaC/2.Terraform/K8s/lessons/150/go-app/deploy/arm64/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-app
  namespace: staging
spec:
  replicas: 2
  selector:
    matchLabels:
      app: go-app
  template:
    metadata:
      labels:
        app: go-app
    spec:
      containers:
        - image: aputra/go-app-arm64-lesson150:latest
          imagePullPolicy: Always
          name: go-app
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              memory: 512Mi
              cpu: 1000m
            limits:
              memory: 512Mi
              cpu: 2000m
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 3
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: role
                    operator: In
                    values:
                      - general
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - go-app
              topologyKey: "kubernetes.io/hostname"
              namespaces:
                - staging
