IaC/2.Terraform/K8s/lessons/150/go-app/deploy/arm64/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: go-app
  namespace: staging
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
  selector:
    app: go-app
